kubernetes/gt/canary/deployment-gt-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sergio-demo-canary
  namespace: golo-gt
  labels:
    app: sergio-demo-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sergio-demo-canary
  template:
    metadata:
      labels:
        app: sergio-demo-canary
    spec:
      containers:
        - name: sergio-demo-canary
          image: crmultitenant.azurecr.io/sergio/demo:5.0.8
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 150
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: sergio-demo-canary
  namespace: golo-gt
spec:
  selector:
    app: sergio-demo-canary
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
