kubernetes/gt/canary/ingress-gt-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sergio-demo-ingress-canary
  namespace: golo-gt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/gt(/|$)(.*)"
            backend:
              service:
                name: sergio-demo-canary
                port:
                  number: 8080
